# VRCHOTAS

./: .gitignore  README.md  VRCHOTAS.sln  VRCHOTAS.slnx
.github/: copilot-instructions.md
VRCHOTAS/: App.xaml  App.xaml.cs  HotkeysWindow.xaml  HotkeysWindow.xaml.cs  LogWindow.xaml  LogWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MappingEditorWindow.xaml  MappingEditorWindow.xaml.cs  VRCHOTAS.csproj  copilot_rule.md
VRCHOTAS/Converters/: BooleanToBrushConverter.cs  BooleanToVisibilityConverter.cs  MappingSourceIndicatorConverter.cs
VRCHOTAS/Interop/: SharedMemoryStateChannel.cs  VirtualControllerState.cs
VRCHOTAS/Logging/: AppLogLevel.cs  FileAppLogger.cs  IAppLogger.cs  LogEntry.cs  LogManager.cs
VRCHOTAS/Models/: HotkeyPreferences.cs  MappingConfig.cs  PreferencesDocument.cs  RawJoystickState.cs
VRCHOTAS/Services/: ConfigurationService.cs  HotkeyRuntime.cs  HotkeyUiUtility.cs  JoystickService.cs  MappingEngine.cs  PoseMappingMath.cs  (+1 more)
VirtualDriver/: CMakeLists.txt  README.md  deploy_driver.bat
VirtualDriver/include/: driver_constants.h  driver_logging.h  driver_openvr_helpers.h  hotas_controller_device.h  hotas_server_driver.h  hotas_watchdog_driver.h  virtual_controller_state.h
VirtualDriver/resources/: driver.vrchotas.vrdrivermanifest
VirtualDriver/resources/input/: vrchotas_virtual_profile.json  vrcompositor_bindings_touch.json
VirtualDriver/src/: driver_hotas.cpp  driver_logging.cpp  driver_openvr_helpers.cpp  hotas_controller_device.cpp  hotas_server_driver.cpp  hotas_watchdog_driver.cpp
samples/: all-mapping-types.sample.json
(+13 files in other folders)
